TestingOrg/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>