TestingOrg/force-app/main/default/objects/Order__c/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>