TestingOrg/force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <color>#78C953</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
                <color>#FFCC33</color>
                <label>Overdue</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <color>#0B6FCE</color>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <color>#FF0000</color>
                <label>Canceled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>