TestingOrg/force-app/main/default/objects/Order__c/fields/Weather_Info__c.field-meta.xml
<CustomField>
    <fullName>Weather_Info__c</fullName>
    <label>Weather Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>